--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Chartbool</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" charset="utf-8"></script>
+    <script src="https://momentjs.com/downloads/moment.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <script src="main.js" charset="utf-8"></script>
