--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <canvas id="myChart" width="400" height="400"></canvas>
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
