--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <canvas id="myChart" width="400" height="400"></canvas>
+    <div class="container1">
+      <canvas id="myChart" width="400" height="400"></canvas>
+    </div>
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
