--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div class="container1">
       <canvas id="myChart" width="400" height="400"></canvas>
     </div>
+    <div class="container1">
+      <canvas id="myChart2" width="400" height="400"></canvas>
+    </div>
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
