--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
     <div class="container1">
       <canvas id="myChart" width="400" height="400"></canvas>
     </div>
-    <div class="container1">
+    <div class="container2">
       <canvas id="myChart2" width="400" height="400"></canvas>
+    </div>
+    <div class="container3">
+      <select class="venditori">
+
+      </select>
+      <select class="mesi_anno">
+
+      </select>
+      <input type="text" placeholder="">
     </div>
     <script src="main.js" charset="utf-8"></script>
   </body>
