inizio seconda milestone

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
       <canvas id="myChart2" width="400" height="400"></canvas>
     </div>
     <div class="container3">
-      <select class="venditori">
+      <select class="sel_venditori">
 
       </select>
-      <select class="mesi_anno">
+      <select class="sel_mesi_anno">
 
       </select>
-      <input type="text" placeholder="">
+      <input id="input_inserimento"type="text" placeholder="inserisci importo vendita">
+      <button id="but_inserimento"type="button" name="button">INSERISCI</button>
     </div>
     <script src="main.js" charset="utf-8"></script>
   </body>
