problema con l'aggiornamento dei grafici

--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!-- grafico 1 -->
     <div class="container1">
       <canvas id="myChart" width="400" height="400"></canvas>
     </div>
+    <!-- grafico 2 -->
     <div class="container2">
       <canvas id="myChart2" width="400" height="400"></canvas>
     </div>
+    <!-- selection dei venditori -->
     <div class="container3">
       <select class="sel_venditori">
 
       </select>
       <select class="sel_mesi_anno">
-
+        
       </select>
       <input id="input_inserimento"type="text" placeholder="inserisci importo vendita">
       <button id="but_inserimento"type="button" name="button">INSERISCI</button>
