--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
     <div class="container2">
       <canvas id="myChart2" width="400" height="400"></canvas>
     </div>
-    <!-- selection dei venditori -->
+    <!-- grafico 3 -->
     <div class="container3">
+      <canvas id="myChart3" width="400" height="400"></canvas>
+    </div>
+    <!-- selection dei venditori -->
+    <div class="container4">
       <select class="sel_venditori">
 
       </select>
       <select class="sel_mesi_anno">
-        
+
       </select>
       <input id="input_inserimento"type="text" placeholder="inserisci importo vendita">
       <button id="but_inserimento"type="button" name="button">INSERISCI</button>
